postcss/testData/inspections/nesting/nestedRulesetWithNestWithoutAmpersand.pcss
h1 {
    @nest <error descr="Nested ruleset selector should contain '&'">h2</error> {
        color: white;
    }
}